apps/traefik/traefik-dashboard.yml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-dash-ingress
  annotations:
    kubernetes.io/ingress.class: "traefik"
    traefik.frontend.rule.type: PathPrefixStrip
spec:
  rules:
  - http:
      paths:
      - path: /traefik
        pathType: Prefix
        backend:
          service:
            name: traefik
            port:
              number: 8080
